[tool.poetry]
name = "pyfindings"
version = "0.1.0"
description = ""
authors = ["Aidar Darmesh <darmesh.aidar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
selenium = "^4.27.1"
django = "^5.1.4"
boto3 = "^1.36.21"
sqlalchemy = "^2.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
